Fix invisible text for older browsers

--- a/app/styles/_foundation_overides.scss
+++ b/app/styles/_foundation_overides.scss
@@ -207,7 +207,7 @@ $header-font-weight: $font-weight-bold;
 // $header-line-height: 1.4;
 // $header-top-margin: .2rem;
 // $header-bottom-margin: .5rem;
-// $header-text-rendering: optimizeLegibility;
+$header-text-rendering: auto;
 
 // We use these to control header font sizes
 // $h1-font-size: rem-calc(44);
@@ -245,7 +245,7 @@ $h3-font-size: rem-calc(21);
 // $paragraph-aside-font-size: rem-calc(14);
 // $paragraph-aside-line-height: 1.35;
 // $paragraph-aside-font-style: italic;
-// $paragraph-text-rendering: optimizeLegibility;
+$paragraph-text-rendering: auto;
 
 // We use these to style <code> tags
 // $code-color: $oil;
